--- a/src/app/Persona/add/add.component.html
+++ b/src/app/Persona/add/add.component.html
@@ -37,7 +37,7 @@
 <footer>
   <p>AUTOMATIZACIÓN DE LOS PROCESOS DE SOFTWARE
   </p>
-  <p>INTEGRANTES: KLEVER SIMALIZA; JAVIER LOACHAMIN
+  <p>INTEGRANTES: KLEVER SIMALIZA; JAVIER LOACHAMIN AZURE
   </p>
   <small th:text="${#dates.format(fecha, 'dd-MM-yyyy HH:mm')}"></small>
 </footer>
